build_output.txt
Processing simulator (platform: native)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
Pre-Build: Converting web/logo.png to LVGL C array (src/assets/openspool_logo.c)...
Pre-Build: Image conversion successful.
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 2 compatible libraries
Scanning dependencies...
Dependency Graph
|-- lvgl @ 9.5.0
|-- ArduinoJson @ 7.4.3
Building in release mode
Compiling .pio/build/simulator/src/ui/DisplayUI.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/nuttx/lv_nuttx_image_cache.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/nuttx/lv_nuttx_lcd.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/nuttx/lv_nuttx_libuv.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/nuttx/lv_nuttx_mouse.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/nuttx/lv_nuttx_profiler.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/nuttx/lv_nuttx_touchscreen.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/assets/lv_opengles_shader.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/glad/src/egl.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/glad/src/gl.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/glad/src/gles2.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/lv_opengles_debug.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/lv_opengles_driver.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/lv_opengles_egl.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/lv_opengles_glfw.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/lv_opengles_texture.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/opengl_shader/lv_opengl_shader_manager.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/opengles/opengl_shader/lv_opengl_shader_program.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/qnx/lv_qnx.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/sdl/lv_sdl_egl.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/sdl/lv_sdl_keyboard.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/sdl/lv_sdl_mouse.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/sdl/lv_sdl_mousewheel.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/sdl/lv_sdl_sw.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/sdl/lv_sdl_texture.o
src/ui/DisplayUI.cpp: In static member function ‘static void DisplayUI::buildWritingOverlay()’:
src/ui/DisplayUI.cpp:588:40: error: too many arguments to function ‘lv_obj_t* lv_spinner_create(lv_obj_t*)’
  588 |   lv_obj_t *spinner = lv_spinner_create(writingOverlay, 1000, 60);
      |                       ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from .pio/libdeps/simulator/lvgl/lvgl.h:86,
                 from src/ui/DisplayUI.h:8,
                 from src/ui/DisplayUI.cpp:1:
.pio/libdeps/simulator/lvgl/src/widgets/spinner/lv_spinner.h:54:12: note: declared here
   54 | lv_obj_t * lv_spinner_create(lv_obj_t * parent);
      |            ^~~~~~~~~~~~~~~~~
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/sdl/lv_sdl_window.o
Compiling .pio/build/simulator/lib6c2/lvgl/drivers/uefi/lv_uefi_context.o
*** [.pio/build/simulator/src/ui/DisplayUI.o] Error 1
========================== [FAILED] Took 2.47 seconds ==========================

Environment    Status    Duration
-------------  --------  ------------
simulator      FAILED    00:00:02.471
==================== 1 failed, 0 succeeded in 00:00:02.471 ====================
